@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2011/01/13 13:38:17 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2011/11/02 20:22:15 shattered Exp $
 
-DISTNAME=	rayshade.4.0
-PKGNAME=	rayshade-4.0
-PKGREVISION=	8
+DISTNAME=	rayshade.4.0.6
+PKGNAME=	rayshade-4.0.6
+#KGREVISION=	8
 CATEGORIES=	graphics
 MASTER_SITES=	ftp://graphics.stanford.edu/pub/rayshade/
 EXTRACT_SUFX=	.tar.Z
@@ -17,6 +17,7 @@ HAS_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	./Configure
 BUILD_TARGET=
 INSTALLATION_DIRS=	bin lib share/doc/rayshade share/examples/rayshade
+WRKSRC=		${WRKDIR}/rayshade.4.0
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/rayshade/rayshade ${DESTDIR}${PREFIX}/bin
